Clarify runtime evidence capture for all labs